--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <meta http-equiv = "refresh" content = "0; url = ./tests/cheatsheet.html" />
+      <meta http-equiv = "refresh" content = "0; url = ./tests/cheatsheet-dark.html" />
    </head>
    <body>
-      Go to the <a href="./tests/cheatsheet.html">Cheatsheet</a>.
+      Go to the <a href="./tests/cheatsheet-dark.html">Cheatsheet</a>.
    </body>
 </html>
