--- a/tests/cheatsheet-night.html
+++ b/tests/cheatsheet-night.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="../dist/css/bootstrap-night.css" rel="stylesheet">
+    <link href="../dist/bootstrap-night.css" rel="stylesheet">
 
     <title>Cheatsheet · Bootstrap v5.0</title>
 
