fix testing examples

--- a/index.html
+++ b/index.html
@@ -1,9 +1,54 @@
-<!DOCTYPE html>
-<html>
-   <head>
-      <meta http-equiv = "refresh" content = "0; url = ./tests/cheatsheet-dark.html" />
-   </head>
-   <body>
-      Go to the <a href="./tests/cheatsheet-dark.html">Cheatsheet</a>.
-   </body>
+<!doctype html>
+<html lang="en">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Bootstrap CSS -->
+  <link href="dist/bootstrap.min.css" rel="stylesheet">
+
+  <title>boostrap-dark-5</title>
+</head>
+<body>
+  <div class="container">
+    <h1>boostrap-dark-5</h1>
+
+    <hr class="mt-5 mb-5">
+
+    <div class="row row-cols-1 row-cols-md-2 mb-3 text-center">
+      <div class="col">
+        <div class="card mb-4 shadow-sm border-secondary">
+          <div class="card-header">
+            <h4 class="my-0 fw-normal">bootstrap-night</h4>
+          </div>
+          <div class="card-body">
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>Dark Only drop-in replacement for Bootstrap 5</li>
+            </ul>
+            <a href="tests/cheatsheet-night.html" class="w-100 btn btn-lg btn-secondary">See Example</a>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card mb-4 shadow-sm border-primary">
+          <div class="card-header">
+            <h4 class="my-0 fw-normal">bootstrap-dark</h4>
+          </div>
+          <div class="card-body">
+            <ul class="list-unstyled mt-3 mb-4">
+              <li>Auto Dark Mode drop-in replacement for Bootstrap 5</li>
+            </ul>
+            <a href="tests/cheatsheet-dark.html" class="w-100 btn btn-lg btn-primary">See Example</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer class="text-center text-muted">
+      &copy; 2021 Vino Rodrigues
+    </footer>
+
+  </div>
+</body>
 </html>
