--- a/tests/cheatsheet-night.html
+++ b/tests/cheatsheet-night.html
@@ -13,22 +13,13 @@
     <!-- Cheatsheet -->
 
     <meta name="theme-color" content="#7952b3">
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>
 
     <link href="cheatsheet.css" rel="stylesheet">
+    <style>
+      .bd-cheatsheet section > h2::before {
+        background-image: linear-gradient(to bottom, rgba(34, 34, 34, 1) calc(100% - 3rem), rgba(34, 34, 34, .01));
+      }
+    </style>
 
   </head>
   <body class="bg-body">
