--- a/tests/cheatsheet-night.html
+++ b/tests/cheatsheet-night.html
@@ -6,19 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="../dist/bootstrap-night.css" rel="stylesheet">
+    <!-- Inform modern browsers that this page supports both dark and light color schemes,
+    and the page author prefers light. -->
+    <meta name="color-scheme" content="light dark">
+    <script>
+      // If `prefers-color-scheme` is not supported, fall back to light mode.
+      // i.e. In this case, inject the `light` CSS before the others, with
+      // no media filter so that it will be downloaded with highest priority.
+      if (window.matchMedia("(prefers-color-scheme: dark)").media === "not all") {
+        document.documentElement.style.display = "none";
+        document.head.insertAdjacentHTML(
+          "beforeend",
+          "<link id="css" rel=\"stylesheet\" href=\"../dist/bootstrap.css\" onload=\"document.documentElement.style.display = ''\">"
+        );
+      }
+    </script>
+    <!-- Load the alternate CSS first ... -->
+    <link id="css-dark" rel="stylesheet" href="../dist/bootstrap-night.css" media="(prefers-color-scheme: dark)">
+    <!-- ... and then the primary CSS last for a fallback on very old browsers that don't support media filtering -->
+    <link id="css-light" rel="stylesheet" href="../dist/bootstrap.css" media="(prefers-color-scheme: no-preference), (prefers-color-scheme: light)">
+    <!-- / Bootstrap CSS -->
 
     <title>Cheatsheet · Bootstrap v5.0</title>
 
     <!-- Cheatsheet -->
 
-    <meta name="theme-color" content="#7952b3">
-
     <link href="cheatsheet.css" rel="stylesheet">
     <style>
-      .bd-cheatsheet section > h2::before {
+      /* .bd-cheatsheet section > h2::before {
         background-image: linear-gradient(to bottom, rgba(34, 34, 34, 1) calc(100% - 3rem), rgba(34, 34, 34, .01));
-      }
+      } */
     </style>
 
   </head>
@@ -34,7 +51,12 @@
           <img src="bootstrap-logo-white.svg" width="38" height="30" class="me-3" alt="Bootstrap">
           Cheatsheet
         </h1>
-        <a href="" class="ms-auto link-light" hreflang="ar"></a>
+        <form class="ms-auto d-flex">
+          <div class="form-check form-switch" title="" data-toggle="tooltip" data-placement="left" data-original-title="Toggle Dark Mode<small><br>or press [D] hot-key</small>">
+            <input class="form-check-input" type="checkbox" id="css-toggle-btn">
+            <label class="form-check-label" for="css-toggle-btn">Toggle Dark Mode</label>
+          </div>
+        </form>
       </div>
     </header>
     <aside class="bd-aside sticky-xl-top text-muted align-self-start mb-3 mb-xl-5 px-2">
