--- a/tests/cheatsheet-night.html
+++ b/tests/cheatsheet-night.html
@@ -5,6 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!--
+      *************************************************************************
+      *** CODE FOR THE CSS STARTS HERE
+      *************************************************************************
+    -->
+
     <!-- Bootstrap CSS -->
     <!-- Inform modern browsers that this page supports both dark and light color schemes,
     and the page author prefers light. -->
@@ -17,7 +23,7 @@
         document.documentElement.style.display = "none";
         document.head.insertAdjacentHTML(
           "beforeend",
-          "<link id="css" rel=\"stylesheet\" href=\"../dist/bootstrap.css\" onload=\"document.documentElement.style.display = ''\">"
+          "<link id=\"css\" rel=\"stylesheet\" href=\"../dist/bootstrap.css\" onload=\"document.documentElement.style.display = ''\">"
         );
       }
     </script>
@@ -27,16 +33,131 @@
     <link id="css-light" rel="stylesheet" href="../dist/bootstrap.css" media="(prefers-color-scheme: no-preference), (prefers-color-scheme: light)">
     <!-- / Bootstrap CSS -->
 
+    <!--
+      !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+      !!! CODE FOR THE CSS ***ENDS*** HERE
+      !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+    -->
+
+
     <title>Cheatsheet · Bootstrap v5.0</title>
 
     <!-- Cheatsheet -->
 
     <link href="cheatsheet.css" rel="stylesheet">
     <style>
-      /* .bd-cheatsheet section > h2::before {
+      body.color-scheme-light .bd-cheatsheet section > h2::before {
+        background-image: linear-gradient(to bottom, rgba(255, 255, 255, 1) calc(100% - 3rem), rgba(255, 255, 255, .01));
+      }
+      body.color-scheme-dark .bd-cheatsheet section > h2::before {
         background-image: linear-gradient(to bottom, rgba(34, 34, 34, 1) calc(100% - 3rem), rgba(34, 34, 34, .01));
-      } */
+      }
     </style>
+
+    <!--
+      *************************************************************************
+      *** CODE FOR THE TOGGLE BUTTON STARTS HERE
+      *************************************************************************
+    -->
+
+    <script>
+      // from: https://stackoverflow.com/questions/9899372#9899701
+      function docReady(fn) {
+        // see if DOM is already available
+        if (document.readyState === "complete" || document.readyState === "interactive") {
+          // call on next available tick
+          setTimeout(fn, 1);
+        } else {
+          document.addEventListener("DOMContentLoaded", fn);
+        }
+      }
+
+      docReady(function() {
+        // DOM is loaded and ready for manipulation from here
+
+        // parts from: https://radek.io/posts/secret-darkmode-toggle/
+
+        const toggle_btn = document.getElementById('toggle-btn');
+        var isCssInit = false;
+
+        function setColorPreference(color_p, persist = false) {
+          const new_s = color_p;
+          const old_s = color_p === 'light' ? 'dark' : 'light'
+
+          const el = document.body;  // gets root <html> tag
+          el.classList.add('color-scheme-' + new_s);
+          el.classList.remove('color-scheme-' + old_s);
+
+          if (persist) {
+            localStorage.setItem('preferred-color-scheme', color_p);
+          }
+        }
+
+        function updateUI(color_p, id = 'css') {
+          toggle_btn.checked = color_p === 'dark';
+
+          if (isCssInit) {
+            const el = document.querySelector('#'+id);
+            const data = el.dataset;
+            if (toggle_btn.checked) {
+              el.setAttribute('href', data.hrefDark)
+            } else {
+              el.setAttribute('href', data.hrefLight);
+            }
+            data.colorScheme = color_p;
+          }
+        }
+
+        function initColorCSS(color_p, id = 'css') {
+          isCssInit = true;
+
+          el_o = document.querySelector('#'+id);
+          if (el_o !== null) el_o.remove();
+          el_l = document.querySelector('#'+id+'-light');
+          el_d = document.querySelector('#'+id+'-dark');
+          if (color_p === 'dark') {
+            el = el_d;
+            el_o = el_l;
+          } else {
+            el = el_l;
+            el_o = el_d;
+          }
+          el.setAttribute('data-href-light', el_l.getAttribute('href'));
+          el.setAttribute('data-href-dark', el_d.getAttribute('href'));
+          el.setAttribute('data-color-scheme', color_p);
+          el.setAttribute('media', 'all');
+          el.setAttribute('id', id);
+          el_o.remove();
+        }
+
+        toggle_btn.addEventListener('click', () => {
+          const color_p = toggle_btn.checked ? 'dark' : 'light';
+
+          if (!isCssInit) initColorCSS(color_p);
+
+          setColorPreference(color_p, true);
+          updateUI(color_p);
+        });
+
+        /* Set Preference on load */
+        const osColorPreference = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
+        // console.log('OS wants ' + osColorPreference);
+        const preferredColorScheme = localStorage.getItem('preferred-color-scheme');
+        if (preferredColorScheme !== null) {
+          initColorCSS(preferredColorScheme);
+        } else {
+          preferredColorScheme = osColorPreference;
+        }
+        setColorPreference(preferredColorScheme, false);
+        updateUI(preferredColorScheme);
+      });
+    </script>
+
+    <!--
+      !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+      !!! CODE FOR THE TOGGLE BUTTON ***ENDS*** HERE
+      !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+    -->
 
   </head>
   <body class="bg-body">
@@ -53,8 +174,8 @@
         </h1>
         <form class="ms-auto d-flex">
           <div class="form-check form-switch" title="" data-toggle="tooltip" data-placement="left" data-original-title="Toggle Dark Mode<small><br>or press [D] hot-key</small>">
-            <input class="form-check-input" type="checkbox" id="css-toggle-btn">
-            <label class="form-check-label" for="css-toggle-btn">Toggle Dark Mode</label>
+            <input class="form-check-input" type="checkbox" id="toggle-btn">
+            <label class="form-check-label" for="toggle-btn"></label>
           </div>
         </form>
       </div>
