--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <h2>The Dark Mode Conundrum</h2>
 
-        <p>Dark mode is not easy ... I discussed (and POC'ed) this at length back in May 2020 in my quasi-white-paper
+        <p>Dark mode is not easy ... I discussed (and proove) this concept at length back in May 2020 in my quasi-white-paper
           <a href="https://vinorodrigues.github.io/bootstrap-dark/">The Definitive Guide to Dark Mode and Bootstrap 4</a>
           (Also on <a href="https://github.com/vinorodrigues/bootstrap-dark">GitHub</a>.) And subsequently also churned the Bootstrap 5β1
           variant <i>(This page!)</i> (Also on <a href="https://github.com/vinorodrigues/bootstrap-dark-5">GitHub</a>.)</p>
@@ -81,19 +81,6 @@
             <a href="tests/cheatsheet-dark.html" class="w-100 btn btn-lg btn-primary">See Example</a>
           </div>
         </div>
-      </div>
-    </div>
-
-    <hr class="mt-3 mb-3">
-
-    <div class="row row-cols-1">
-      <div class="col">
-        <h2>Further Reading</h2>
-
-        <ul>
-          <li><a href="https://radek.io/posts/secret-darkmode-toggle/">How to Build a Secret Dark Mode Toggle for Your Blog</a> - Radek Pazdera, 26 October 2020</li>
-          <li><a href="https://ryanfeigenbaum.com/dark-mode/">The Complete Guide to the Dark Mode Toggle</a> - Ryan Feigenbaum, 20 March 2020</li>
-        </ul>
       </div>
     </div>
 
