`prefers-color-scheme: no-preference` has been removed from the spec

--- a/tests/cheatsheet-night.html
+++ b/tests/cheatsheet-night.html
@@ -30,7 +30,7 @@
     <!-- Load the alternate CSS first ... -->
     <link id="css-dark" rel="stylesheet" href="../dist/bootstrap-night.css" media="(prefers-color-scheme: dark)">
     <!-- ... and then the primary CSS last for a fallback on very old browsers that don't support media filtering -->
-    <link id="css-light" rel="stylesheet" href="../dist/bootstrap.css" media="(prefers-color-scheme: no-preference), (prefers-color-scheme: light)">
+    <link id="css-light" rel="stylesheet" href="../dist/bootstrap.css" media="(prefers-color-scheme: light)">
     <!-- / Bootstrap CSS -->
 
     <!--
