--- a/tests/cheatsheet-dark.html
+++ b/tests/cheatsheet-dark.html
@@ -12,7 +12,7 @@
 
     <!-- Cheatsheet -->
 
-    <link href="cheatsheet.css" rel="stylesheet">
+    <link href="cheatsheet-dark.css" rel="stylesheet">
     <style>
       .bd-cheatsheet section > h2::before {
         background-image: linear-gradient(to bottom, rgba(255, 255, 255, 1) calc(100% - 3rem), rgba(255, 255, 255, .01));
