refactor tests folder to examples

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <ul class="list-unstyled mt-3 mb-4">
               <li>Dark Only drop-in replacement for Bootstrap 5</li>
             </ul>
-            <a href="tests/cheatsheet-night.html" class="w-100 btn btn-lg btn-secondary">See Example</a>
+            <a href="examples/cheatsheet-night.html" class="w-100 btn btn-lg btn-secondary">See Example</a>
           </div>
         </div>
       </div>
@@ -78,7 +78,7 @@
             <ul class="list-unstyled mt-3 mb-4">
               <li>Auto Dark Mode drop-in replacement for Bootstrap 5</li>
             </ul>
-            <a href="tests/cheatsheet-dark.html" class="w-100 btn btn-lg btn-primary">See Example</a>
+            <a href="examples/cheatsheet-dark.html" class="w-100 btn btn-lg btn-primary">See Example</a>
           </div>
         </div>
       </div>
