refined -dark example from vinorodrigues/bootstrap fork

--- a/examples/cheatsheet-dark.html
+++ b/examples/cheatsheet-dark.html
@@ -39,7 +39,7 @@
           <span class="d-light-inline d-dark-none">Light</span>
           )
         </h1>
-        <a href="" class="ms-auto link-light" hreflang="ar"></a>
+        <span class="ms-auto text-light"><small><b>&#9432;</b></small> <span class="d-none d-light-inline">Switch your OS to Dark Mode</span><span class="d-none d-dark-inline">Try toggling your OS to and from Dark Mode</span></span>
       </div>
     </header>
     <aside class="bd-aside sticky-xl-top text-muted align-self-start mb-3 mb-xl-5 px-2">
