added nightshade scss

--- a/examples/cheatsheet-dark.html
+++ b/examples/cheatsheet-dark.html
@@ -34,12 +34,13 @@
       <div class="container-fluid d-flex align-items-center">
         <h1 class="d-flex align-items-center fs-4 text-white mb-0">
           <img src="bootstrap-logo-white.svg" width="38" height="30" class="me-3" alt="Bootstrap">
-          Cheatsheet (
-          <span class="d-dark-inline d-light-none">Dark</span>
-          <span class="d-light-inline d-dark-none">Light</span>
-          )
+          Cheatsheet (in&nbsp;
+          <span class="d-none d-dark-inline">Dark</span>
+          <span class="d-none d-light-inline">Light</span>
+          <span class="d-light-none d-dark-none">Unknown</span>
+          &nbsp;Mode)
         </h1>
-        <span class="ms-auto text-light"><small><b>&#9432;</b></small> <span class="d-none d-light-inline">Switch your OS to Dark Mode</span><span class="d-none d-dark-inline">Try toggling your OS to and from Dark Mode</span></span>
+        <span class="ms-auto text-light"><span style="font-size:80%">	ℹ</span>&nbsp; <span class="d-none d-light-inline">Switch your OS to Dark Mode</span><span class="d-none d-dark-inline">Try toggling your OS to and from Dark Mode</span></span>
       </div>
     </header>
     <aside class="bd-aside sticky-xl-top text-muted align-self-start mb-3 mb-xl-5 px-2">
