--- a/examples/cheatsheet-nightshade.html
+++ b/examples/cheatsheet-nightshade.html
@@ -5,152 +5,24 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!--
-      *************************************************************************
-      *** CODE FOR THE CSS STARTS HERE
-      *************************************************************************
-    -->
-
     <!-- Bootstrap CSS -->
-    <!-- Inform modern browsers that this page supports both dark and light color schemes,
-    and the page author prefers light. -->
-    <meta name="color-scheme" content="light dark">
-    <script>
-      // If `prefers-color-scheme` is not supported, fall back to light mode.
-      // i.e. In this case, inject the `light` CSS before the others, with
-      // no media filter so that it will be downloaded with highest priority.
-      if (window.matchMedia("(prefers-color-scheme: dark)").media === "not all") {
-        document.documentElement.style.display = "none";
-        document.head.insertAdjacentHTML(
-          "beforeend",
-          "<link id=\"css\" rel=\"stylesheet\" href=\"../dist/bootstrap.css\" onload=\"document.documentElement.style.display = ''\">"
-        );
-      }
-    </script>
-    <!-- Load the alternate CSS first ... -->
-    <link id="css-dark" rel="stylesheet" href="../dist/bootstrap-night.css" media="(prefers-color-scheme: dark)">
-    <!-- ... and then the primary CSS last for a fallback on very old browsers that don't support media filtering -->
-    <link id="css-light" rel="stylesheet" href="../dist/bootstrap.css" media="(prefers-color-scheme: light)">
-    <!-- / Bootstrap CSS -->
-
-    <!--
-      !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-      !!! CODE FOR THE CSS ***ENDS*** HERE
-      !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-    -->
-
+    <link href="../dist/bootstrap-nightshade.css" rel="stylesheet">
 
     <title>Cheatsheet · Bootstrap v5.0</title>
 
     <!-- Cheatsheet -->
 
     <link href="cheatsheet-nights.css" rel="stylesheet">
-
-    <!--
-      *************************************************************************
-      *** CODE FOR THE TOGGLE BUTTON STARTS HERE
-      *************************************************************************
-    -->
-
-    <script>
-      // from: https://stackoverflow.com/questions/9899372#9899701
-      function docReady(fn) {
-        // see if DOM is already available
-        if (document.readyState === "complete" || document.readyState === "interactive") {
-          // call on next available tick
-          setTimeout(fn, 1);
-        } else {
-          document.addEventListener("DOMContentLoaded", fn);
+    <style>
+      .bd-cheatsheet section > h2::before {
+        background-image: linear-gradient(to bottom, rgba(255, 255, 255, 1) calc(100% - 3rem), rgba(255, 255, 255, .01));
+      }
+      @media (prefers-color-scheme: dark) {
+        .bd-cheatsheet section > h2::before {
+          background-image: linear-gradient(to bottom, rgba(34, 34, 34, 1) calc(100% - 3rem), rgba(34, 34, 34, .01));
         }
       }
-
-      docReady(function() {
-        // DOM is loaded and ready for manipulation from here
-
-        // parts from: https://radek.io/posts/secret-darkmode-toggle/
-
-        const toggle_btn = document.getElementById('toggle-btn');
-        var isCssInit = false;
-
-        function setColorPreference(color_p, persist = false) {
-          const new_s = color_p;
-          const old_s = color_p === 'light' ? 'dark' : 'light'
-
-          const el = document.body;  // gets root <html> tag
-          el.classList.add('color-scheme-' + new_s);
-          el.classList.remove('color-scheme-' + old_s);
-
-          if (persist) {
-            localStorage.setItem('preferred-color-scheme', color_p);
-          }
-        }
-
-        function updateUI(color_p, id = 'css') {
-          toggle_btn.checked = color_p === 'dark';
-
-          if (isCssInit) {
-            const el = document.querySelector('#'+id);
-            const data = el.dataset;
-            if (toggle_btn.checked) {
-              el.setAttribute('href', data.hrefDark)
-            } else {
-              el.setAttribute('href', data.hrefLight);
-            }
-            data.colorScheme = color_p;
-          }
-        }
-
-        function initColorCSS(color_p, id = 'css') {
-          isCssInit = true;
-
-          el_o = document.querySelector('#'+id);
-          if (el_o !== null) el_o.remove();
-          el_l = document.querySelector('#'+id+'-light');
-          el_d = document.querySelector('#'+id+'-dark');
-          if (color_p === 'dark') {
-            el = el_d;
-            el_o = el_l;
-          } else {
-            el = el_l;
-            el_o = el_d;
-          }
-          el.setAttribute('data-href-light', el_l.getAttribute('href'));
-          el.setAttribute('data-href-dark', el_d.getAttribute('href'));
-          el.setAttribute('data-color-scheme', color_p);
-          el.setAttribute('media', 'all');
-          el.setAttribute('id', id);
-          el_o.remove();
-        }
-
-        toggle_btn.addEventListener('click', () => {
-          const color_p = toggle_btn.checked ? 'dark' : 'light';
-
-          if (!isCssInit) initColorCSS(color_p);
-
-          setColorPreference(color_p, true);
-          updateUI(color_p);
-        });
-
-        /* Set Preference on load */
-        const osColorPreference = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
-        // console.log('OS wants ' + osColorPreference);
-        const preferredColorScheme = localStorage.getItem('preferred-color-scheme');
-        if (preferredColorScheme !== null) {
-          initColorCSS(preferredColorScheme);
-        } else {
-          preferredColorScheme = osColorPreference;
-        }
-        setColorPreference(preferredColorScheme, false);
-        updateUI(preferredColorScheme);
-      });
-    </script>
-
-    <!--
-      !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-      !!! CODE FOR THE TOGGLE BUTTON ***ENDS*** HERE
-      !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-    -->
-
+    </style>
   </head>
   <body class="bg-body">
 
@@ -162,14 +34,13 @@
       <div class="container-fluid d-flex align-items-center">
         <h1 class="d-flex align-items-center fs-4 text-white mb-0">
           <img src="bootstrap-logo-white.svg" width="38" height="30" class="me-3" alt="Bootstrap">
-          Cheatsheet
+          Cheatsheet (
+          <span class="d-dark-inline d-light-none">Dark</span>
+          <span class="d-light-inline d-dark-none">Light</span>
+          )
         </h1>
-        <form class="ms-auto d-flex">
-          <div class="form-check form-switch tooltip-demo">
-            <input class="form-check-input" type="checkbox" id="toggle-btn" title="" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-title="Toggle Dark Mode or press [D] hot-key">
-            <label class="form-check-label" for="toggle-btn"></label>
-          </div>
-        </form>
+        <!-- ***** ***** ***** THE BUTTON GOES HERE ***** ***** ***** -->
+        <!-- ***** ***** ***** THE BUTTON GOES HERE ***** ***** ***** -->
       </div>
     </header>
     <aside class="bd-aside sticky-xl-top text-muted align-self-start mb-3 mb-xl-5 px-2">
@@ -1893,24 +1764,7 @@
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
-    <!-- https://wangchujiang.com/hotkeys/ -->
-    <script src="https://cdn.jsdelivr.net/npm/hotkeys-js@3.7/dist/hotkeys.js"></script>
-
     <!-- Cheatsheet -->
     <script src="cheatsheet.js"></script>
-    <script>
-      (function() {
-
-        const toggle_btn_K = document.getElementById('toggle-btn');
-
-        hotkeys('d', {keyup: true, keydown: false}, function(e) {
-          e.preventDefault();
-          if (e.type === 'keyup') {
-            toggle_btn_K.click();
-          }
-        });
-
-      })();
-    </script>
   </body>
 </html>
