--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@
 
         <p>I guess it comes down to time ... both to decide on how to do this, <i>and</i> then churn the code, <i>and</i> then test it.</p>
 
-        <p>This body of work explores three methods decribed in the <i>"<a href="https://vinorodrigues.github.io/bootstrap-dark/">Definitive Guide</a>"</i> piece:</p>
+        <p>This body of work explores three methods decribed in the <i>"<a href="https://vinorodrigues.github.io/bootstrap-dark/">.. Definitive Guide ..</a>"</i> piece:</p>
 
         <ol>
           <li><code><b>bootstrap-night</b></code> - Two independant theme CSS files, auto-loaded, but with JS to offer toggle button and media query awareness,</li>
+          <li hidden><s><code><b>bootstrap-nightfall</b></code> - Not ported.</s></li>
           <li value="3"><code><b>bootstrap-nightshade</b></code> - One CSS file, <code>body</code> class driven and with a JS library to offer toggle button, and</li>
           <li><code><b>bootstrap-dark</b></code> - Pure form (uses the <code>prefers-color-scheme</code> CSS media query) one CSS file that offers auto OS switching dark mode.</li>
         </ol>
@@ -77,7 +78,7 @@
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-3 mb-4">
-              <li>Dark Mode drop-in replacement for Bootstrap 5</li>
+              <li>Dark Mode Bootstrap 5 with add-on JS lib</li>
             </ul>
             <a href="examples/cheatsheet-nightshade.html" class="w-100 btn btn-lg btn-danger">See Example</a>
           </div>
@@ -90,7 +91,7 @@
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-3 mb-4">
-              <li>Auto Dark Mode drop-in replacement for Bootstrap 5</li>
+              <li>Dark Mode drop-in substitute for Bootstrap 5</li>
             </ul>
             <a href="examples/cheatsheet-dark.html" class="w-100 btn btn-lg btn-primary">See Example</a>
           </div>
