--- a/examples/cheatsheet-night.html
+++ b/examples/cheatsheet-night.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-bs-set-darkmode-onload="true">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -38,7 +38,6 @@
       !!! CODE FOR THE CSS ***ENDS*** HERE
       !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
     -->
-
 
     <title>Cheatsheet · Bootstrap v5.0</title>
 
@@ -1641,8 +1640,8 @@
 
             <div class="bd-example">
             <div class="progress">
-              <div class="progress-bar" role="progressbar" style="width: 15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
-              <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" style="width: 15%;" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" style="width: 40%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             </div>
           </div>
@@ -1890,27 +1889,11 @@
 
 
 
+
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
-    <!-- https://wangchujiang.com/hotkeys/ -->
-    <script src="https://cdn.jsdelivr.net/npm/hotkeys-js@3.7/dist/hotkeys.js"></script>
-
     <!-- Cheatsheet -->
     <script src="cheatsheet.js"></script>
-    <script>
-      (function() {
-
-        const toggle_btn_K = document.getElementById('toggle-btn');
-
-        hotkeys('d', {keyup: true, keydown: false}, function(e) {
-          e.preventDefault();
-          if (e.type === 'keyup') {
-            toggle_btn_K.click();
-          }
-        });
-
-      })();
-    </script>
   </body>
 </html>
