--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
   <link href="dist/bootstrap-dark.css" rel="stylesheet">
 
   <title>boostrap-dark-5</title>
+
+  <style>
+    /* BrowserSync */
+    #__bs_notify__ {
+      position: fixed;
+      top: calc(100% - 50px) !important;
+      opacity: .5;
+      border-radius: 0 !important;
+      background-color: deepskyblue !important;
+      color: black !important;
+    }
+  </style>
 </head>
 <body>
   <div class="container">
@@ -21,22 +33,22 @@
 
         <h2>The Dark Mode Conundrum</h2>
 
-        <p>Dark mode is not easy ... I discussed (and proove) this concept at length back in May 2020 in my quasi-white-paper
+        <p>Dark mode is not easy ... I discussed <i>(and proove)</i> this concept at length back in May 2020 in my quasi-white-paper
           <a href="https://vinorodrigues.github.io/bootstrap-dark/">The Definitive Guide to Dark Mode and Bootstrap 4</a>
-          (Also on <a href="https://github.com/vinorodrigues/bootstrap-dark">GitHub</a>.) And subsequently also churned the Bootstrap 5β1
-          variant <i>(This page!)</i> (Also on <a href="https://github.com/vinorodrigues/bootstrap-dark-5"></a>GitHub</a>.)</p>
+          <i>(Also on <a href="https://github.com/vinorodrigues/bootstrap-dark">GitHub</a>.)</i> And subsequently also churned the Bootstrap 5β1
+          variant <i>(This page!)</i> <i>(Also on <a href="https://github.com/vinorodrigues/bootstrap-dark-5">GitHub</a>.)</i></p>
 
         <p>There are huge contentions around how to make "dark mode" available. For example:</p>
 
         <ul>
-          <li>Toggle button (with all it's JS, persistence issues and the FOUC that goes with it),</li>
+          <li>Toggle button <i>(with all it's JS, persistence issues (GDPR cookie consent??)</i> and the FOUC that goes with it),</li>
           <li>vs. leverage a pure <code>prefers-color-scheme</code> media query implementation.</li>
         </ul>
 
         <p>and</p>
 
         <ul>
-          <li>Does each UI concept have it's own <tt>@media (prefers-...</tt> line, thus creating a larger-than-needs-to-be CSS (like <code>prefers-reduced-motion</code> does in 5β1),</li>
+          <li>Does each UI concept have it's own <tt>@media (prefers-...</tt> line, thus creating a larger-than-needs-to-be CSS <i>(like <code>prefers-reduced-motion</code> does in 5β1)</i>,</li>
           <li>vs. inject all the <tt>@media (prefers-...</tt> at the end of the CSS, thus forcing the authors to maintain two sets of SCSS, leading to maintenance nightmares,</li>
           <li>vs. go with a whole bunch of sibling classes that can be switched with JS, like <a href="https://tailwindcss.com/docs/dark-mode">Tailwind</a> does,</li>
           <li>vs. go with a known base class that is switched with JS, like <a href="https://www.gethalfmoon.com/docs/core-javascript-library/#toggling-dark-mode">Halfmoon</a> does.</li>
@@ -50,7 +62,7 @@
           <li><code><b>bootstrap-night</b></code> - Two independant theme CSS files, auto-loaded, but with JS to offer toggle button and media query awareness,</li>
           <li hidden><s><code><b>bootstrap-nightfall</b></code> - Not ported.</s></li>
           <li value="3"><code><b>bootstrap-nightshade</b></code> - One CSS file, <code>body</code> class driven and with a JS library to offer toggle button, and</li>
-          <li><code><b>bootstrap-dark</b></code> - Pure form (uses the <code>prefers-color-scheme</code> CSS media query) one CSS file that offers auto OS switching dark mode.</li>
+          <li><code><b>bootstrap-dark</b></code> - Pure form <i>(uses the <code>prefers-color-scheme</code> CSS media query)</i> one CSS file that offers auto OS switching dark mode.</li>
         </ol>
       </div>
     </div>
@@ -106,9 +118,14 @@
     <hr class="mt-3 mb-3">
 
     <footer class="text-center text-muted">
-      Made with <span style="font-size:80%">❤️</span>&nbsp; by Vino Rodrigues | &copy; 2021
+      Made with <b style="font-size:80%">❤️</b> by Vino Rodrigues | &copy; 2021
     </footer>
 
   </div>
+
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <!-- Don't need it, but pre-load the browser -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+
 </body>
 </html>
