--- a/examples/cheatsheet-nightshade.html
+++ b/examples/cheatsheet-nightshade.html
@@ -1749,7 +1749,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
     <!-- DarkMode.js -->
-    <script src="../js/src/darkmode.js"></script>
+    <script src="../dist/js/darkmode.js"></script>
+    <script>
+      darkmode.toggleDarkMode();
+    </script>
 
     <!-- Cheatsheet -->
     <script src="cheatsheet.js"></script>
