fixed a few paths from the dist css move

--- a/examples/cheatsheet-dark.html
+++ b/examples/cheatsheet-dark.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="../dist/bootstrap-dark.css" rel="stylesheet">
+    <link href="../dist/css/bootstrap-dark.css" rel="stylesheet">
 
     <title>Cheatsheet · Bootstrap v5.0</title>
 
