--- a/examples/cheatsheet-night.html
+++ b/examples/cheatsheet-night.html
@@ -23,14 +23,14 @@
         document.documentElement.style.display = "none";
         document.head.insertAdjacentHTML(
           "beforeend",
-          "<link id=\"css\" rel=\"stylesheet\" href=\"../dist/bootstrap.css\" onload=\"document.documentElement.style.display = ''\">"
+          "<link id=\"css\" rel=\"stylesheet\" href=\"../dist/css/bootstrap.css\" onload=\"document.documentElement.style.display = ''\">"
         );
       }
     </script>
     <!-- Load the alternate CSS first ... -->
-    <link id="css-dark" rel="stylesheet" href="../dist/bootstrap-night.css" media="(prefers-color-scheme: dark)">
+    <link id="css-dark" rel="stylesheet" href="../dist/css/bootstrap-night.css" media="(prefers-color-scheme: dark)">
     <!-- ... and then the primary CSS last for a fallback on very old browsers that don't support media filtering -->
-    <link id="css-light" rel="stylesheet" href="../dist/bootstrap.css" media="(prefers-color-scheme: light)">
+    <link id="css-light" rel="stylesheet" href="../dist/css/bootstrap.css" media="(prefers-color-scheme: light)">
     <!-- / Bootstrap CSS -->
 
     <!--
