--- a/examples/index.html
+++ b/examples/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <link href="../dist/bootstrap-dark.css" rel="stylesheet">
+  <link href="../dist/css/bootstrap-dark.css" rel="stylesheet">
   <meta http-equiv="refresh" content="3; URL=.." />
 </head>
 <body class="m-3">
