--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Bootstrap CSS -->
-  <link href="dist/bootstrap-dark.css" rel="stylesheet">
+  <link href="dist/css/bootstrap-dark.css" rel="stylesheet">
 
   <title>boostrap-dark-5</title>
 
