nightshade variant and darkmode.js library ready

--- a/examples/cheatsheet-dark.html
+++ b/examples/cheatsheet-dark.html
@@ -13,9 +13,9 @@
     <!-- Cheatsheet -->
 
     <link href="cheatsheet-dark.css" rel="stylesheet">
+    <link rel="icon" href="../favicon.ico">
   </head>
   <body class="bg-body">
-
 
 
 
@@ -1753,6 +1753,11 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+
+    <!-- DarkMode.js -->
+    <!-- NOT REALLY NEEDED, JUST ADDED HERE TO SHOW PORTABILITY -->
+    <script src="../dist/js/darkmode.esm.js"></script>
+
 
     <!-- Cheatsheet -->
     <script src="cheatsheet.js"></script>
