--- a/examples/cheatsheet-night.html
+++ b/examples/cheatsheet-night.html
@@ -150,6 +150,7 @@
       !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
     -->
 
+    <link rel="icon" href="../favicon.ico">
   </head>
   <body class="bg-body">
 
