--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       color: black !important;
     }
   </style>
+  <link rel="icon" href="favicon.ico">
 </head>
 <body>
   <div class="container">
@@ -90,7 +91,7 @@
           </div>
           <div class="card-body">
             <ul class="list-unstyled mt-3 mb-4">
-              <li>Dark Mode Bootstrap 5 with add-on JS lib</li>
+              <li>Dark Mode Bootstrap 5 with add-on JS library</li>
             </ul>
             <a href="examples/cheatsheet-nightshade.html" class="w-100 btn btn-lg btn-danger">See Example</a>
           </div>
